[package]
name = "openstack-database-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
chrono = "0.4.40"
config = "0.15.11"
diesel = { version = "2.2.9", features = ["chrono", "mysql", "r2d2"] }
prometheus = "0.14.0"
r2d2 = "0.8.10"
serde = "1.0.219"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
diesel = { version = "2.2.9", features = ["sqlite"] }
indoc = "2.0.6"
pretty_assertions = "1.4.1"
